--- a/MySQL_Test/MySQL_Test.csproj
+++ b/MySQL_Test/MySQL_Test.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SocketTCPData\SocketTCPData.csproj" />
   </ItemGroup>
 
